Bug 360741 - Moving transparency mask up and down via buttons and shortcuts - ctrl+ pgup and pg down crashes krita
Summary: Moving transparency mask up and down via buttons and shortcuts - ctrl+ pgup a...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-19 16:19 UTC by Raghavendra kamath
Modified: 2016-03-24 10:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-03-19 16:19:04 UTC
Moving transparency mask up and down via buttons and shortcuts - ctrl+ pgup and pg down crashes krita.

when you click the button to move the transparency mask up or down or when yu press the shortcut krita crashes immediately.

Reproducible: Always

Steps to Reproduce:
1.open krita and create a new document
2.draw something in a new layer, then select an area with a rectangle selection tool
3.add a transparency mask on this layer
4. then try to move this transparency mask up or down with the buttons on layer stack or ctrl+pg up or down in the layer stack

Actual Results:  
krita crashes

Expected Results:  
krita should not crash and the transparency mask should move up and down in the layer stack

scottyp on IRC said that this doesn't happen in windows
Comment 1 Raghavendra kamath 2016-03-19 16:21:24 UTC
here is the backtrace - 

[raghu@raghu ~]$ gdb ~/kf5/inst/bin/krita
GNU gdb (GDB) 7.11
Copyright (C) 2016 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-pc-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from /home/raghu/kf5/inst/bin/krita...done.
(gdb) run
Starting program: /home/raghu/kf5/inst/bin/krita 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
krita.lib.pigment: Compiled for arch: ::Vc::AVXImpl
krita.lib.pigment: Features supported:
krita.lib.pigment:       "SSE2"         ---      yes
krita.lib.pigment:       "SSSE3"        ---      yes
krita.lib.pigment:       "SSE4.1"       ---      yes
krita.lib.pigment:       "AVX "         ---      yes
[New Thread 0x7fffe4ff0700 (LWP 31156)]
Set style "Fusion"
KoJsonTrader will load its plugins from "/home/raghu/kf5/inst/lib64/kritaplugins"
        falling back on QIcon::FromTheme: "document-properties"
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
[New Thread 0x7fffc98e9700 (LWP 31157)]
[New Thread 0x7fffc90e8700 (LWP 31158)]
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
libpng warning: iCCP: too many profiles
libpng warning: iCCP: too many profiles
libpng warning: iCCP: too many profiles
libpng warning: iCCP: too many profiles
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
[New Thread 0x7fffc88e7700 (LWP 31159)]
[Thread 0x7fffc88e7700 (LWP 31159) exited]
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
[New Thread 0x7fffc88e7700 (LWP 31160)]
QObject::connect: No such signal QLineEdit::returnPressed(QString)
QObject::connect: No such signal QLineEdit::returnPressed(QString)
KoJsonTrader will load its plugins from "/home/raghu/kf5/inst/lib64/kritaplugins"
initTemplates(); "krita/templates/"
[New Thread 0x7fffb7540700 (LWP 31161)]
[New Thread 0x7fffb6d3f700 (LWP 31162)]
[New Thread 0x7fffb653e700 (LWP 31163)]
[New Thread 0x7fffb5d3d700 (LWP 31164)]
[New Thread 0x7fffb553c700 (LWP 31165)]
[New Thread 0x7fffb4d3b700 (LWP 31166)]
[New Thread 0x7fff9ffff700 (LWP 31167)]
[New Thread 0x7fff9f7fe700 (LWP 31168)]
[Thread 0x7fffb553c700 (LWP 31165) exited]
[Thread 0x7fff9f7fe700 (LWP 31168) exited]
[Thread 0x7fffb7540700 (LWP 31161) exited]
[Thread 0x7fffb653e700 (LWP 31163) exited]
[Thread 0x7fffb5d3d700 (LWP 31164) exited]
[Thread 0x7fff9ffff700 (LWP 31167) exited]
[Thread 0x7fffb4d3b700 (LWP 31166) exited]
[Thread 0x7fffb6d3f700 (LWP 31162) exited]
libpng warning: iCCP: too many profiles
krita.lib.flake: "InteractionTool" : action "object_order_lower" conflicts with canvas action "rotate_canvas_left" shortcut: "Ctrl+["
krita.lib.flake: "InteractionTool" : action "object_order_raise" conflicts with canvas action "rotate_canvas_right" shortcut: "Ctrl+]"
krita.lib.flake: "InteractionTool" : action "object_order_lower" conflicts with canvas action "rotate_canvas_left" shortcut: "Ctrl+["
krita.lib.flake: "InteractionTool" : action "object_order_raise" conflicts with canvas action "rotate_canvas_right" shortcut: "Ctrl+]"
[New Thread 0x7fffb6d3f700 (LWP 31169)]
[New Thread 0x7fffb4d3b700 (LWP 31170)]
[New Thread 0x7fff9ffff700 (LWP 31171)]
[New Thread 0x7fffb5d3d700 (LWP 31172)]
[New Thread 0x7fff9cdfe700 (LWP 31173)]
[New Thread 0x7fff92ffe700 (LWP 31174)]
[New Thread 0x7fff927fd700 (LWP 31175)]
[New Thread 0x7fff91ffc700 (LWP 31176)]
[Thread 0x7fffb5d3d700 (LWP 31172) exited]
[Thread 0x7fffb6d3f700 (LWP 31169) exited]
[Thread 0x7fff927fd700 (LWP 31175) exited]
[Thread 0x7fff9cdfe700 (LWP 31173) exited]
[Thread 0x7fff92ffe700 (LWP 31174) exited]
[Thread 0x7fff9ffff700 (LWP 31171) exited]
[Thread 0x7fff91ffc700 (LWP 31176) exited]
[Thread 0x7fffb4d3b700 (LWP 31170) exited]
[New Thread 0x7fffb4d3b700 (LWP 31177)]
[New Thread 0x7fff91ffc700 (LWP 31178)]
[New Thread 0x7fff9ffff700 (LWP 31179)]
[New Thread 0x7fff92ffe700 (LWP 31180)]
[New Thread 0x7fffb6e0a700 (LWP 31181)]
[New Thread 0x7fffb5d3e700 (LWP 31182)]
[New Thread 0x7fff9cdfe700 (LWP 31183)]
[New Thread 0x7fff927fd700 (LWP 31184)]
[New Thread 0x7fff917fb700 (LWP 31185)]
[Thread 0x7fffb5d3e700 (LWP 31182) exited]
[Thread 0x7fff9ffff700 (LWP 31179) exited]
[Thread 0x7fff9cdfe700 (LWP 31183) exited]
[Thread 0x7fff927fd700 (LWP 31184) exited]
[Thread 0x7fff91ffc700 (LWP 31178) exited]
[Thread 0x7fff92ffe700 (LWP 31180) exited]
[Thread 0x7fffb6e0a700 (LWP 31181) exited]
[Thread 0x7fffb4d3b700 (LWP 31177) exited]
[New Thread 0x7fffb4d3b700 (LWP 31186)]
[New Thread 0x7fffb6e0a700 (LWP 31187)]
[New Thread 0x7fff92ffe700 (LWP 31188)]
[New Thread 0x7fff91ffc700 (LWP 31189)]
[New Thread 0x7fffb5d3e700 (LWP 31190)]
[New Thread 0x7fff9ffff700 (LWP 31191)]
[New Thread 0x7fff9cdfe700 (LWP 31192)]
[New Thread 0x7fff927fd700 (LWP 31193)]
Skipping node (*it)->name() = "Transparency Mask 1"

Thread 35 "Thread (pooled)" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fff91ffc700 (LWP 31189)]
LowerRaiseLayer::populateChildCommands (this=0x109a7b40) at /home/raghu/kf5/src/krita/libs/ui/kis_node_juggler_compressed.cpp:302
302             KisNodeSP headNode = m_lower ? sortedNodes.first() : sortedNodes.last();
(gdb) thread apply all bt

Thread 39 (Thread 0x7fff927fd700 (LWP 31193)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 38 (Thread 0x7fff9cdfe700 (LWP 31192)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 37 (Thread 0x7fff9ffff700 (LWP 31191)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 36 (Thread 0x7fffb5d3e700 (LWP 31190)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 35 (Thread 0x7fff91ffc700 (LWP 31189)):
#0  LowerRaiseLayer::populateChildCommands (this=0x109a7b40) at /home/raghu/kf5/src/krita/libs/ui/kis_node_juggler_compressed.cpp:302
#1  0x00007ffff6c26ec7 in KisCommandUtils::AggregateCommand::redo (this=0x109a7b40) at /home/raghu/kf5/src/krita/libs/image/kis_command_utils.cpp:31
#2  0x00007ffff6bf2fa0 in KisStrokeStrategyUndoCommandBased::doStrokeCallback (this=0xe14d240, data=<optimized out>)
    at /home/raghu/kf5/src/krita/libs/image/kis_stroke_strategy_undo_command_based.cpp:117
#3  0x00007ffff6d1acb1 in KisStrokeJob::run (this=<optimized out>) at /home/raghu/kf5/build/libs/image/../../../src/krita/libs/image/kis_stroke_job.h:44
#4  KisUpdateJobItem::run (this=0x97465a0) at /home/raghu/kf5/build/libs/image/../../../src/krita/libs/image/kis_update_job_item.h:66
#5  0x00007ffff1748493 in ?? () from /usr/lib/libQt5Core.so.5
#6  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 34 (Thread 0x7fff92ffe700 (LWP 31188)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
---Type <return> to continue, or q <return> to quit---
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 33 (Thread 0x7fffb6e0a700 (LWP 31187)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 32 (Thread 0x7fffb4d3b700 (LWP 31186)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 31 (Thread 0x7fff917fb700 (LWP 31185)):
#0  0x00007fffed6683e8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cb86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1748623 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7fffc88e7700 (LWP 31160)):
#0  0x00007fffed66803f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cc4b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff2452bca in ?? () from /usr/lib/libQt5Widgets.so.5
#3  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7fffc90e8700 (LWP 31158)):
#0  0x00007fffed66803f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cc4b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1745b16 in QSemaphore::tryAcquire(int, int) () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff6b6cd33 in KisTileDataSwapper::waitForWork (this=<optimized out>) at /home/raghu/kf5/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#4  0x00007ffff6b6cf0a in KisTileDataSwapper::run (this=0x7ffff6fbafa0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>)
    at /home/raghu/kf5/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#5  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#6  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#7  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7fffc98e9700 (LWP 31157)):
#0  0x00007fffed66803f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007ffff174cc4b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff174585b in QSemaphore::acquire(int) () from /usr/lib/libQt5Core.so.5
---Type <return> to continue, or q <return> to quit---
#3  0x00007ffff6b51f6e in KisTileDataPooler::waitForWork (this=0x7ffff6fbaf60 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>)
    at /home/raghu/kf5/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:165
#4  0x00007ffff6b52691 in KisTileDataPooler::run (this=0x7ffff6fbaf60 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>)
    at /home/raghu/kf5/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:187
#5  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#6  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#7  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fffe4ff0700 (LWP 31156)):
#0  0x00007ffff0b46c3d in poll () from /usr/lib/libc.so.6
#1  0x00007fffef456ae2 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007fffef458757 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007fffe68fe0a9 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007ffff174b9ae in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007fffed662424 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007ffff0b4fcbd in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7ffff7dfe840 (LWP 31151)):
#0  0x00007ffff0b46c3d in poll () from /usr/lib/libc.so.6
#1  0x00007fffec41ff7c in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fffec42008c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007ffff198333f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007ffff192a37a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007ffff193233c in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#6  0x0000000000402f1b in main (argc=1, argv=0x7fffffffe6a8) at /home/raghu/kf5/src/krita/krita/main.cc:178
(gdb)
Comment 2 Raghavendra kamath 2016-03-19 16:23:28 UTC
Wolthera on IRC it crashes for her too on any mask type
Comment 3 Halla Rempt 2016-03-19 19:05:45 UTC
Yes, I can confirm this issue. Looks like something for Dmitry.
Comment 4 Dmitry Kazakov 2016-03-24 10:36:59 UTC
Git commit 89587dc283ff8254e66acda7d17fe364f21f9306 by Dmitry Kazakov.
Committed on 24/03/2016 at 10:36.
Pushed by dkazakov into branch 'master'.

Added ability to move Masks with Ctrl+PgUp/PgDn

The patch also fixes a crash due to wrong filtering

Fixes T1901

M  +54   -13   libs/ui/kis_node_juggler_compressed.cpp

http://commits.kde.org/krita/89587dc283ff8254e66acda7d17fe364f21f9306