Added ability to move Masks with Ctrl+PgUp/PgDn

The patch also fixes a crash due to wrong filtering

Fixes T1901
BUG:360741